# quant-bot

./: .env.database  .env.example  .gitignore  01-量化投资基金组织架构方案.md  02-量化投资基金组织架构方案_修正版.md  03-全球顶级量化投资公司分析对比.md  04-两人团队MVP规划设计.md  05-量化交易系统开发起步指南.md  06-量化交易系统开发需求详细说明书.md  ADAPTIVE_STRATEGY_README.md  CHANGELOG.md  CURRENT_ISSUES.md  DATA_CONSISTENCY_VALIDATION_GUIDE.md  Dockerfile  FINAL_PROJECT_DELIVERY.md  IB_MIGRATION_REPORT.md  INTEGRATED_OPTIMIZATION_GUIDE.md  Makefile  NEXT_DEVELOPMENT_PLAN.md  NEXT_SESSION_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_COMPLETION_ASSESSMENT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_INDEX.md  PROJECT_STATUS.md  PYTHON_313_COMPATIBILITY.md  PYTHON_MIGRATION.md  QUICKSTART.md  README.md  README_COMPETITIONS.md  README_IB_Integration.md  README_Trading_System.md  README_logger.md  REQUIREMENTS_COMPARISON_ANALYSIS.md  SYSTEM_ARCHITECTURE.md  TEAM_COLLABORATION.md  USAGE_GUIDE.md  USAGE_GUIDE_MAIN.md  VERSION.md  (+83 more)
.github/workflows/: python-ci.yml
backup_before_ib_migration/: fetch_nasdaq_top100.py
backups/: 20251004_215227.dump  20251004_215333.dump  20251004_215735.dump  quant_trading_20251004_214810.dump
competitions/citadel/: ML_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_METHODOLOGY.md  README.md  adaptive_risk_manager.py  analyze_realistic_strategy.py  citadel_balanced_strategy.py  citadel_comprehensive_analysis.py  citadel_conservative_strategy.py  citadel_data_analysis.py  citadel_enhanced_analysis.py  citadel_enhanced_strategy.py  citadel_final_strategy.py  citadel_grid_search.py  citadel_hft_strategy.py  citadel_improved_strategy.py  citadel_optimization.py  citadel_optimization_report_20251006_203737.txt  citadel_optimized_strategy.py  citadel_realistic_strategy.py  citadel_robust_strategy.py  citadel_ultimate_strategy.py  debug_optimized_strategy.py  debug_realistic_strategy.py  debug_signal_filtering.py  debug_timestamp_issue.py  debug_trade_execution.py  improved_strategy_analysis.py  improved_strategy_analysis_report_20251006_213314.txt  ml_backtest_framework.py  ml_enhanced_citadel_strategy.py  ml_enhanced_optimization_methodology.py  multi_objective_optimizer.py  predict.py  real_time_monitoring_system.py  realistic_strategy_analysis_report_20251006_213921.txt  strategy_comparison_report.py  strategy_comparison_report_20251006_212242.txt  strategy_optimization_methodology.py  strategy_performance_comparison.py  train.py
competitions/jane_street/: predict.py  train.py
config/: __init__.py  logging.yaml  settings.py
docs/: ADVANCED_TIPS_PRACTICES.md  API_Documentation.md  BEGINNER_GUIDE.md  CHART_INTERPRETATION_GUIDE.md  COMPETITION_STRATEGIES.md  CORE_MODULES_GUIDE.md  DATA_FETCH_GUIDE.md  DATA_USAGE_GUIDE.md  FAQ_TROUBLESHOOTING.md  IB_API_PRIORITY_IMPLEMENTATION.md  IB_API_Setup_Guide.md  INVESTMENT_ANALYSIS_GUIDE.md  KAGGLE_COMPETITION_ANALYSIS.md  ML_ENHANCED_METHODOLOGY.md  Migration_Guide.md  PREMIUM_COMPETITIONS_ANALYSIS.md  SYSTEM_OVERVIEW.md  User_Manual.md  VISUAL_GUIDE.md  advanced_feature_engineering_guide.md  logger_system_guide.md
examples/: README.md  README_Firstrade.md  README_HFT_Integration.md  README_new_brokers.md  advanced_factor_strategy_demo.py  advanced_feature_engineering_demo.py  advanced_risk_manager.py  alpaca_adapter.py  alpaca_trading_system.py  automated_trading_system.py  basic_feature_demo.py  broker_factory.py  cached_data_demo.py  charles_schwab_adapter.py  chart_gallery.py  check_tws_api.py  citadel_ib_integration.py  complete_feature_engineering_demo.py  complete_hft_example.py  comprehensive_investment_report.py  config.py  config.yaml  config_example.py  console_formatter.py  core_modules_demo.py  create_realistic_sample_data.py  create_sample_data.py  data_fetch_demo.py  data_scraping_demo.py  data_tutorial.py  enhanced_data_module.py  enhanced_ib_trading_system.py  enhanced_market_calendar_demo.py  etrade_adapter.py  factor_analysis_module.py  factor_evaluation.py  factor_tutorial.py  feature_engineering_summary.py  feature_engineering_visualization.py  fetch_sample_data.py  (+49 more)
examples/templates/: dashboard.html  monitoring_dashboard.html
reports/: performance_report_20251012_102758.md
scripts/: backup.sh  build.sh  clean.sh  competition_manager.py  competition_setup.py  deploy.sh  monitor.sh  restore.sh  start.sh  stop.sh
src/: __init__.py
src/backtest/: engine.py
src/backtesting/: __init__.py  adaptive_execution_strategy.py  enhanced_backtest_engine.py  integrated_optimization_system.py  memory_pool_manager.py  performance_analyzer.py  smart_cache_system.py
src/core/: __init__.py  diagnostics.py  ml_engine.py  monitor.py  optimizer.py  risk_manager.py  signal_generator.py  utils.py
src/data/: __init__.py  alpaca_data_provider.py  alternative_data.py  alternative_sources.py  data_adapter.py  manager.py  (+11 more)
strategy_test_results/: strategy_dashboard.html  strategy_test_report.txt
tests/: conftest.py  test_dao_session_behavior.py  test_error_handler.py  test_examples_factor_engine_snapshot.py  test_factor_engine.py  test_factor_engine_extra.py  test_integration.py  test_logger.py  test_performance.py  test_performance_analyzer.py  test_performance_optimizer.py  test_resource_manager.py  test_risk_factors.py  test_risk_management.py  test_system_monitor.py  test_technical_factors.py  test_technical_factors_as_series.py
(+92 files in other folders)
